--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-3">
-                <h1><a href="/" class="text-white h2">Patoarchitekci</a></h1>
+                <h2><a href="/" class="text-white h2">Patoarchitekci</a></h2>
             </div>
             <div class="col-9">
                 <nav class="site-navigation position-relative text-right text-md-right" role="navigation">
@@ -23,17 +23,20 @@
                         {% endfor %}
                         <li><a href="https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?l=pl"><img
                                     src="/assets/images/podcast-apple.svg" width="100%" alt="Słuchaj podcastu w Apple Podcast!></a></li>
-                        <li><a href="https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"><img
+                        <li><a href=" https://open.spotify.com/show/13wiwR1mmHD3PTBcMt9J9J"><img
                                     src="/assets/images/podcast-spotify.png" width="100%" alt="Słuchaj podcastu w Spotify!></a></li>
                         <li><a
-                                href="https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz"><img
-                                    src="/assets/images/podcast-google.svg" width="100%" alt="Słuchaj podcastu w Google Podcast!"></a></li>
+                                href="
+                                    https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz"><img
+                                    src="/assets/images/podcast-google.svg" width="100%"
+                                    alt="Słuchaj podcastu w Google Podcast!"></a></li>
                         <li><a
                                 href="https://www.youtube.com/watch?v=cYzTAFHtxg8&list=PLcDSzJIbSPdzO4U5jmA0N9g-yT6bGQGGr"><img
-                                    src="/assets/images/podcast-youtube.png" width="100%" alt="Słuchaj podcastu w YouTube!"></a></li>
-                        <li><a
-                                href="https://www.spreaker.com/show/4215515/episodes/feed"><img
-                                    src="/assets/images/podcast-rss.png" width="100%" alt="Słuchaj podcastu przez ulubioną aplikację!"></a></li>
+                                    src="/assets/images/podcast-youtube.png" width="100%"
+                                    alt="Słuchaj podcastu w YouTube!"></a></li>
+                        <li><a href="https://www.spreaker.com/show/4215515/episodes/feed"><img
+                                    src="/assets/images/podcast-rss.png" width="100%"
+                                    alt="Słuchaj podcastu przez ulubioną aplikację!"></a></li>
                     </ul>
                 </nav>
             </div>
