--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -6,7 +6,12 @@
     </div>
     <div class="site-mobile-menu-body"></div>
 </div>
-<header class="site-navbar py-4 absolute transparent" role="banner">
+
+<header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
+    <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
+        <p>Meetup patoarchitekci.io z okazji 50 odcinka podcastu😎</p>
+        <p>👉<a href="https://pato50.konfeo.com/pl/groups">Rejestracja tutaj</a>👈</p>
+    </div>
     <div class="container">
         <div class="row align-items-center">
             <div class="col-3">
