--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,13 +7,13 @@
     <div class="site-mobile-menu-body"></div>
 </div>
 
-<header class="site-navbar py-4 absolute transparent" role="banner">
-    <!-- <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
+<!--<header class="site-navbar py-4 absolute transparent" role="banner">-->
+    <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-        <p>Meetup patoarchitekci.io z okazji 50 odcinka podcastu😎</p>
-        <p>👉<a style="color: #fff; text-decoration: underline;" href="https://pato50.konfeo.com/pl/groups">Rejestracja tutaj</a>👈</p>
-        <p>Tylko do 15:00 do 3 listopada‼️</p>
-    </div>-->
+        <p>Dołącz do Poznaj Terraform w przedsprzedaży😎</p>
+        <p>👉<a style="color: #fff; text-decoration: underline;" href="http://bit.ly/405dUTx">Sprawdź tutaj</a>👈</p>
+        <p>Tylko do 22:00 do 19 kwietnia‼️</p>
+    </div>
     <div class="container">
         <div class="row align-items-center">
             <div class="col-3">
