--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,8 +9,8 @@ layout: default
         <h1 class="text-white font-weight-light mb-2 display-4">
           {{ page.title }}
         </h1>
-        <div class="text-white mb-3"><span
-            class="text-white-opacity-05"><small>{{page.date | date: '%Y, %b %d'}}</small></span></div>
+        <div class="text-white mb-3"><span class="text-white-opacity-05"><small>{{page.date | date: '%Y, %b
+              %d'}}</small></span></div>
       </div>
     </div>
   </div>
@@ -18,7 +18,10 @@ layout: default
 <div class="container site-section">
   {% if page.apple %}
   <div class="player mb-5">
-    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175" style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation" src="https://embed.podcasts.apple.com/pl/id1477067604?i={{{ page.apple }}}&l=pl"></iframe>
+    <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175"
+      style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
+      sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+      src="https://embed.podcasts.apple.com/pl/id1477067604?i={{{ page.apple }}}&l=pl"></iframe>
   </div>
   {% elsif page.spreaker %}
   <div class="player mb-5">
