--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
     <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175"
       style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
       sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
-      src="https://embed.podcasts.apple.com/pl/id1477067604?i={{ page.apple }}&l=pl"></iframe>
+      src="https://embed.podcasts.apple.com/pl/podcast/{{ page.apple }}&l=pl"></iframe>
   </div>
   {% elsif page.spreaker %}
   <div class="player mb-5">
