--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,7 +17,7 @@ layout: default
 </div>
 <div class="container site-section">
   {% if page.apple %}
-  <div class="player mb-5">
+  <div class="mb-5 container text-center">
     <iframe allow="autoplay *; encrypted-media *; fullscreen *; clipboard-write" frameborder="0" height="175"
       style="width:100%;max-width:660px;overflow:hidden;border-radius:10px;"
       sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
