--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,13 +7,13 @@
     <div class="site-mobile-menu-body"></div>
 </div>
 
- <!--<header class="site-navbar py-4 absolute transparent" role="banner">-->
-    <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
+    <header class="site-navbar py-4 absolute transparent" role="banner">
+    <!--<header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
         <p>Sprawdź Pato szkolenia z Kubernetes prowadzone przez Łukasza😎👇</p>
         <p>1️⃣ <a style="color: #fff; text-decoration: underline;" href="https://dolacz.architekturaikontenery.pl/szkolenie-azure-kubernetes-service-aks-masterclass-13-06-2023">13.06.2023 - Szkolenie Azure Kubernetes Service (AKS) Masterclass</a></p>
         <p>2️⃣ <a style="color: #fff; text-decoration: underline;" href="https://dolacz.architekturaikontenery.pl/szkolenie-kubernetes-the-hard-way-14-06-2023">14.06.2023 - Szkolenie Kubernetes the Hard Way</a></p>
-    </div>
+    </div> -->
     <div class="container">
         <div class="row align-items-center">
             <div class="col-3">
