--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,19 +7,23 @@
     <div class="site-mobile-menu-body"></div>
 </div>
 
-<header class="site-navbar py-4 absolute transparent" role="banner">
-    <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
-        <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-            <p>Sprawdź całą ofertę Patoszkoleń na 2024 rok 👇</p>
-            <p>
-                💣💣💣 <a href="/szkolenia/" style="color: #fff; text-decoration: underline;">Pato szkolenia</a> 💣💣💣
-            </p>
-            <p>Dwa najblisze to: <a style="color: #fff; text-decoration: underline;"
-                    href="https://easl.ink/Ktyht">[04.06.2024] Architektura 101</a> i <a
-                    style="color: #fff; text-decoration: underline;" href="https://easl.ink/ZVd3f">[18.06.2024]
-                    Observability</a>
-            </p>
-        </div>
+
+{% if page.cta != false %}
+<header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
+    <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
+        <p>Sprawdź całą ofertę Patoszkoleń na 2024 rok 👇</p>
+        <p>
+            💣💣💣 <a href="/szkolenia/" style="color: #fff; text-decoration: underline;">Pato szkolenia</a> 💣💣💣
+        </p>
+        <p>Dwa najblisze to: <a style="color: #fff; text-decoration: underline;"
+                href="https://easl.ink/Ktyht">[04.06.2024] Architektura 101</a> i <a
+                style="color: #fff; text-decoration: underline;" href="https://easl.ink/ZVd3f">[18.06.2024]
+                Observability</a>
+        </p>
+    </div>
+    {% else %}
+    <header class="site-navbar py-4 absolute transparent" role="banner">
+        {% endif %}
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-3">
