--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -11,13 +11,10 @@
 {% if page.cta != false %}
 <header class="site-navbar py-4 absolute transparent" role="banner" style="padding-top: 0px!important;">
     <div style="padding: 1rem; margin-bottom: 1rem;  background-color: #f23a2e; color: #fff; text-align: center;">
-        <p>Sprawdź całą ofertę Patoszkoleń na 2024 rok 👇</p>
+        <p>Szybkie szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede)👇</p>
         <p>
-            💣💣💣 <a href="/szkolenia/" style="color: #fff; text-decoration: underline;">Pato szkolenia</a> 💣💣💣
-        </p>
-        <p>Najblisze to: <a
-                style="color: #fff; text-decoration: underline;" href="https://easl.ink/ZVd3f">[18.06.2024]
-                Observability</a>
+            💣💣💣 <a href="https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher"
+                style="color: #fff; text-decoration: underline;">[28.08.2024] Szkolenie RKE2 i Rancher</a> 💣💣💣
         </p>
     </div>
     {% else %}
